--- a/src/app/components/create-tests/create-tests.component.css
+++ b/src/app/components/create-tests/create-tests.component.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction:row;
   justify-content: space-between;
-  overflow: hidden
 
 }
 
@@ -22,6 +21,7 @@
   flex: 3;
   margin-top: 0.7%;
   margin-left: 1%;
+  overflow: auto;
 
 }
 
