--- a/src/app/components/recording-permission-view/recording-permission-view.component.css
+++ b/src/app/components/recording-permission-view/recording-permission-view.component.css
@@ -2,6 +2,13 @@
   width: 500px;
   height: 200px;
   background: #ffffff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 1;
 }
 
 .header-icon {
@@ -16,12 +23,12 @@
 }
 .no-button-position{
   position: absolute;
-  left: 100px;
+  left: 110px;
   top:175px;
 }
 .checkbox-position{
   position: absolute;
-  left: 175px;
+  left: 190px;
   top:175px;
 }
 
