--- a/src/app/components/create-questionnaire/create-questionnaire.component.css
+++ b/src/app/components/create-questionnaire/create-questionnaire.component.css
@@ -1,9 +1,6 @@
 .inputField {
 
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: 20px;
-    margin-left: 20px;
+  margin: 5px 20px;
 
 }
 
@@ -29,7 +26,9 @@
 }
 
 .questionText {
+
   flex: 6;
+
 }
 
 #removeQuestionWrapper {
@@ -52,28 +51,19 @@
 
 #questionNo {
 
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 20px;
-    margin-left: 20px;
+  margin: 10px 20px;
 
 }
 
 #questionnaireName {
 
-    margin-top: 10px;
-    margin-bottom: 0px;
-    margin-right: 20px;
-    margin-left: 20px;
+  margin: 10px 20px 0px;
 
 }
 
 #questionsForm {
 
-    margin-top: 0px;
-    margin-bottom: 5px;
-    margin-right: 20px;
-    margin-left: 20px;
+  margin: 0px 20px 5px;
 }
 
 
@@ -96,6 +86,8 @@
 
 
 .button {
+
   flex: 1;
   margin: 5px;
+
 }
