--- a/src/app/components/create-tests/create-tests.component.html
+++ b/src/app/components/create-tests/create-tests.component.html
@@ -42,10 +42,10 @@
 
   <div id="rightSide">
 
-    <mat-tab-group id="tabGroup" mat-stretch-tabs>
+    <mat-tab-group id="tabGroup" animationDuration="0ms" mat-stretch-tabs>
       <mat-tab class="tab" label="Tasks" >
 
-        <form class="container mt-3" (ngSubmit)="logValue()" >
+        <form class="container mt-3">
           <section *ngFor="let task of rawTasks; let i = index;" fxLayout="column">
             <div id="task">
               <div id="taskText">
