--- a/src/app/components/recording-permission-view/recording-permission-view.component.html
+++ b/src/app/components/recording-permission-view/recording-permission-view.component.html
@@ -11,7 +11,7 @@
       </mat-card-content>
     <mat-card-actions>
         <button class="mat-focus-indicator mat-raised-button mat-button-base mat-primary left yes-button-position" (click)="submitDecision()">Yes</button>
-        <button class="mat-focus-indicator mat-raised-button mat-button-base mat-primary left no-button-position">No</button>
+        <button class="mat-focus-indicator mat-raised-button mat-button-base mat-primary left no-button-position" [routerLink]="'/home'">No</button>
         <mat-checkbox class ="checkbox-position" color='warn'  [(ngModel)]="isChecked" (change)="!isChecked" >Remember me</mat-checkbox>
     </mat-card-actions>
 
