--- a/src/app/components/view-tests/view-tests.component.css
+++ b/src/app/components/view-tests/view-tests.component.css
@@ -1,6 +1,9 @@
 .example-list {
-  width: 900px;
+  width: 700px;
   max-width: 100%;
+  position: relative;
+  left: 450px;
+  bottom: -3%;
   border: solid 1px #ccc;
   min-height: 60px;
   display: block;
@@ -48,4 +51,26 @@
   border: dotted 3px #999;
   min-height: 60px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+#stTest {
+  position: absolute;
+  left: 250px;
+}
+
+#export {
+  position: absolute;
+  left: 410px;
+}
+
+#record {
+  position: absolute;
+  left: 550px;
+}
+
+#title {
+  position: relative;
+  left: 450px;
+  bottom: -2%;
+  color: silver;
 }
