--- a/src/app/components/create-card-sorting-test/create-card-sorting-test.component.css
+++ b/src/app/components/create-card-sorting-test/create-card-sorting-test.component.css
@@ -1,81 +1,66 @@
 #bodyWrapper {
 
-  height: 94%;
+  height: 92%;
+  text-align: center;
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*justify-content: space-between;*/
+
+}
+
+#testsForm {
+
+  margin-top: 1%;
+  /*flex: 30;*/
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
+  overflow: auto;
 
 }
 
+.spacer {
+  flex: 1 1 auto;
+}
 
-#leftSide {
+.csWrapper {
+  flex: 1;
+}
 
+#submitButton {
+
+  /*flex: 1;*/
+  margin-top: 2%;
+  margin-bottom: 0.5%;
+
+}
+
+.categorySubject {
   display: flex;
-  flex-direction:column;
-  flex: 7;
+  flex-direction: row;
   justify-content: space-between;
+}
+
+.inputName {
+
+  flex: 8;
 
 }
 
-#rightSide {
-
-  display: flex;
-  flex-direction:column;
-  flex: 7;
-  justify-content: space-between;
-
-}
-
-
-#sidebar {
-
-  flex: 3;
-
-}
-
-
-#toolbar {
+.removeWrapper {
 
   flex: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 1%;
-  margin-right: 1%;
+  text-align: center;
+  position: relative;
 
 }
 
+.removeButton {
 
-#import {
-
-}
-
-
-#saveTest {
-
-  right: 0;
-
-}
-
-
-#websiteContainer {
-
-  flex: 11;
-  border-top: 2px solid #AAAAAA;
-  border-right: 2px solid #AAAAAA;
-
-}
-
-
-#websiteIframe {
-
-  border: none;
-  padding: 0;
-  -webkit-transform:scale(0.9);
-  -webkit-transform-origin: top left;
-  margin: 0 0 0 -4%;
-  background-color: #EEEEEE;
-  width: 115.5%;
-  height: 111.2%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: none !important;
 
 }
